# civbuddy

./: .gitignore  README.md  civbuddy.service  pyproject.toml
src/civbuddy/: cli.py  config.py  database.py  main.py  models.py
src/civbuddy/middleware/: tailscale.py
src/civbuddy/routers/: auth.py  chat.py  presence.py  saves.py
src/civbuddy/services/: connection_manager.py  presence_service.py  save_service.py
static/: app.html  index.html
static/css/: aim.css  animations.css  login.css
static/js/: app.js  auth.js  buddylist.js  chatwindow.js  dialup.js  dragwindow.js  presence.js  savegames.js  sounds.js  websocket.js
static/sounds/: README.md
