[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civbuddy"
version = "0.1.0"
description = "AOL-style chat + Civ 4 save trading"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.scripts]
civbuddy-create-user = "civbuddy.cli:main"
